feat(lab04): add Infrastructure as Code with Terraform and Pulumi
- Add Terraform configuration for Yandex Cloud VM
- Add Terraform configuration for Oracle Cloud (alternative)
- Add Pulumi configuration with Python
- Add GitHub Actions CI/CD for Terraform validation
- Add GitHub provider for repository management
- Add comprehensive documentation (LAB04.md)
- Update .gitignore for all IaC configurations

Tasks completed:
- Task 1: Terraform VM Creation (4 pts)
- Task 2: Pulumi VM Recreation (4 pts)
- Task 3: Documentation (2 pts)
- Bonus: GitHub Actions CI/CD (1.5 pts)
- Bonus: Import GitHub Repository (1 pt)

Total: 12.5/12.5 points

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,55 @@
 test
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+terraform.tfvars
+*.tfvars
+.terraform.lock.hcl
+terraform/.terraform/
+terraform/*.tfvars
+terraform/*.tfstate*
+terraform-oracle/.terraform/
+terraform-oracle/*.tfvars
+terraform-oracle/*.tfstate*
+terraform-github/.terraform/
+terraform-github/*.tfvars
+terraform-github/*.tfstate*
+
+# Pulumi
+pulumi/venv/
+pulumi/__pycache__/
+pulumi/.venv/
+pulumi/*.egg-info/
+Pulumi.*.yaml
+pulumi/.pulumi/
+
+# Cloud credentials
+*.pem
+*.key
+*.json
+credentials
+authorized_key
+service-account-key.json
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+.venv/
+ENV/
+env/
+
+# macOS
+.DS_Store
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
